# Loom_Kernel

./: .clang-format  CMakeLists.txt  Makefile  ols.json  shell.nix
cmake/: dbg.sh  gdb  mkimg.sh  run.sh  x86_64-tc.cmake
include/loom/: arch.h  boot_info.h  compiler.h  console.h  font.h  limine.h  math.h  mmap.h  print.h  sync.h  time.h  types.h  writer.h
kernel/: kernel.odin
kernel/arch/: arch.odin  arch_i386.odin
kernel/arch/x86/: _start32.S  arch.S  arch32.S  io.S  link.ld
kernel/cfg/: cfg.odin
kernel/console/: console.odin  vga.odin
kernel/fmt/: console.odin
kernel/main/: main32.odin  start32.odin
kernel/mb1/: mb1.odin
kernel/mm/: allocator.odin  mmap.odin  page.odin
kernel/mm/allocator/: allocator.odin
kernel/mm/page/: allocator.odin  list.odin
kernel/sync/: lock.odin  spin_lock.odin
kernel/types/: list.odin  types.odin
kernel32/: main.odin  multiboot1.S
kernel32/arch/x86/: io.odin  link.ld
kernel32/console/: console.odin  vga.odin
src/: font.c  gfx_console.c  limine.c  limine.conf  loom.ld  main.c  mmap.c  print.c  sync.c  time.c
